clusters/apps/env/production/observability/ingressroute.prom.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: prometheus.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`prometheus.${FAMILY_DOMAIN}`)"
      priority: 10
      middlewares:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: auth-system
      services:
        - name: kube-prometheus-kube-prome-prometheus
          port: 9090
    - kind: Rule
      match: "Host(`prometheus.${FAMILY_DOMAIN}`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: auth-system
          port: 9000
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: prometheus.${FAMILY_DOMAIN}
